--- a/Proiect2/app/src/main/res/values/strings.xml
+++ b/Proiect2/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add">Adaugă</string>
+    <string name="test">test</string>
+    <string name="search_icon">search-icon</string>
 </resources>
